--- a/.github/workflows/cosmos-deploy.yml
+++ b/.github/workflows/cosmos-deploy.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           resourceGroupName: ${{ secrets.AZURE_RESOURCE_GROUP }}
           template: ./infra/main.bicep
-          parameters: location=eastus
+          parameters: location=eastus2
           deploymentName: cosmos-deployment-${{ github.run_number }}
